--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -110,3 +110,19 @@ video {
 /*    !*opacity: 0.5;*!*/
 /*    z-index: 1;*/
 /*}*/
+
+
+/*for all the comments*/
+.commentrow{
+    /*background-color: #cde6ff;*/
+}
+
+/*for each job post type*/
+#profile-card{
+    background-image: url("/img/blue-wallpaper.jpg");
+}
+.profile-header{
+    font-family: 'Orbitron', sans-serif;
+    font-size: xx-large;
+    color: #E3E7D3;
+}
