tested on screenshare

--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -8,7 +8,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-            <a class="navbar-brand" id="logo" href="/">CodeOn</a>
+            <a class="navbar-brand" id="logo" href="/users/dashboard">CodeOn</a>
             <a class="navbar-brand mr" href="/login">Login</a>
         </li>
         <ul th:if="${#httpServletRequest.requestURI.contains('interview-questions')}" class="navbar-nav ml-auto">
