added detail to stying

--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -1,12 +1,25 @@
 
+i:hover{
+    text-decoration: none;
+    color: #0c5460;
+}
 /*changes upvote-downvote buttons*/
 .btn-link{
     color: #0c5460;
+    text-decoration: none;
+}
+button{
+    color: #0c5460;
+    text-decoration: none;
+    background: none;
+    border: none;
 }
 h1{
     font-family: 'Montserrat', sans-serif;
 }
-
+p{
+    font-family: 'Montserrat', sans-serif;
+}
 
 
 /*parallax*/
