--- a/src/main/resources/templates/job-postings/show.html
+++ b/src/main/resources/templates/job-postings/show.html
@@ -8,7 +8,6 @@
 <nav th:replace="fragments/navbar.html :: navbar"></nav>
 
 <div class="container profile-container">
-
     <!--    PROFILE CARD    -->
     <div class="card p-5 mt-5 blue-font" id="profile-card">
         <h2 class="card-title text-center p-3 profile-header">Jobs</h2>
@@ -34,7 +33,8 @@
                         <p class="m-r mb-0 userprint">Posted on: <span class="userinfo" th:text = "${post.dateTime}"></span> by <span class="userinfo" th:text="${post.user.username}"></span>    </p>
                         <h1 th:text = "${post.body}"></h1>
                         <p th:text = "${post.title}"></p>
-                        <p th:text = "${post.answer}"></p>
+                        <p class = "mb-0" th:text = "${post.answer}"></p>
+                        <hr class="m-0">
                         <div th:each="comment : ${post.commentList}">
                             <div class="row">
                                 <div class="col-1">
@@ -46,13 +46,11 @@
                                     <p class="mb-0 mt-1" th:text = "${comment.body}" th:id="'comment-body-' + ${comment.id}"></p>
                                     <div th:if="${user.id == comment.user.id}">
                                         <div class="edit-comment-div" th:id="'edit-comment-div-' + ${comment.id}"></div>
-                                        <button class="edit-comment-button btn btn-link float-right p-0" th:id="'edit-comment-button-' + ${comment.id}">Edit Comment</button>
+                                        <button class="edit-comment-button btn btn-link float-right p-0 mr-3 align-self-end" th:id="'edit-comment-button-' + ${comment.id}">Edit Comment</button>
                         </div>
-
                         </div>
-
                         </div>
-                            <hr>
+                            <hr class="m-0">
                         </div>
                         <div class="create-comment-div" th:id="'create-comment-div-' + ${post.id}"></div>
                         <button class="add-comment-button btn btn-link" th:id="'add-comment-button-' + ${post.id}">Comment</button>
