--- a/src/main/resources/templates/users/dashboard.html
+++ b/src/main/resources/templates/users/dashboard.html
@@ -163,7 +163,7 @@
         <div class="col-3">
             <div class="card text-center">
                 <div class="card-body">
-                    <h3 class="fancy-header">Most Recent Interview Questions</h3>
+                    <h1>Most Recent Interview Questions</h1>
                     <p class="card-text">This page is connect within the CodeOn community and help one another. Whether it be studying, collaborating, needing a mentor or just a place to see how others experiences were. The mentorship page is the place to start. </p>
                     <button type="button" class="btn btn-link" data-toggle="modal" data-target="#inteviewModal">
                         Interview Questions Create
