--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,6 +17,7 @@
             </div>
         </div>
     </div>
+</header>
         <div class="col-xs-12 col-md-4 mb-1">
             <div class="card shadow p-3 mb-5 bg-white rounded">
                 <div class="embed-responsive embed-responsive-4by3">
