sticky chat button and landing page fixed

--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -1,9 +1,13 @@
+html{
+    scroll-behavior: smooth;
 
+
+}
 /*changes upvote-downvote buttons*/
 .btn-link{
     color: #0c5460;
 }
-h1{
+h1,h2,h3,h4{
     font-family: 'Montserrat', sans-serif;
 }
 
@@ -137,8 +141,10 @@ header {
 /*    !*opacity: 0.5;*!*/
 /*    z-index: 1;*/
 /*}*/
-
-
+/*splashpage text in front*/
+.splash{
+    color: white;
+}
 /*for all the comments*/
 .commentrow{
     /*background-color: #cde6ff;*/
@@ -152,4 +158,19 @@ header {
     font-family: 'Orbitron', sans-serif;
     font-size: xx-large;
     color: #E3E7D3;
+}
+.show-chat-modal-button {
+    position: fixed;
+    right: 0;
+    border: 0;
+    z-index: 50000;
+    bottom: 77px;
+    width: 190px;
+    font-size: 100px;
+}
+
+@media only screen and (max-width: 600px) {
+.parallax2{
+    display: none;
+}
 }
