fixed modal in interview

--- a/src/main/resources/templates/interview-questions/show.html
+++ b/src/main/resources/templates/interview-questions/show.html
@@ -19,7 +19,9 @@
         <p class="align-self-end profile-btns">
             <!--                maybe add some buttons to the front-->
         </p>
-    </div><br><br>
+    </div>
+</div>
+    <br><br>
 <div class="container">
     <div th:each="post : ${postList}">
         <div class="card mb-2">
