chatbox and search styled

--- a/src/main/resources/templates/fragments/chat-box.html
+++ b/src/main/resources/templates/fragments/chat-box.html
@@ -25,9 +25,10 @@
                         </button>
                     </div>
                     <div class="modal-body row" id="chat-modal-body">
-                        <div class="new-chat-div" id="new-chat-div"></div>
-                        <button class="new-chat-button" id="new-chat-button">New Chat</button>
-                        <div id="talkjs-container" style="width: 100%; margin: 10px; height: 500px"><i>Loading chat...</i></div>
+                        <div class="new-chat-div col-12 text-center" id="new-chat-div"></div>
+                        <button class="new-chat-button col-12 text-right" id="new-chat-button">New Chat</button>
+                        <h3 class="col-12 text-center">Inbox</h3>
+                        <div class="col-12" id="talkjs-container" style="width: 100%; margin: 10px; height: 500px"><i>Loading chat...</i></div>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
