chatbox and search styled

--- a/src/main/resources/templates/users/login.html
+++ b/src/main/resources/templates/users/login.html
@@ -20,7 +20,7 @@
     <label for="password">Password</label>
     <input  class="form-control"  id="password" name="password" type="password" />
     <br>
-    <input  class="form-control"  type="submit" value="Log In" />
+    <input  class="form-control"  type="submit" value="Login" />
     <br>
 </form>
     <div class="text-center">
