--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -77,6 +77,19 @@ body, html {
     padding-bottom: 35px;
 }
 
+#interview-whiteboard-button, #interview-question-round-button {
+    width: 200px;
+    text-align: center;
+    color: #E3E7D3;
+    font-size: 20px;
+    border: 2px solid #E3E7D3;
+    border-radius: 3px;
+    background-color: #0f6674;
+    margin: 5px 5px;
+    padding-top: 3px;
+    padding-bottom: 5px;
+}
+
 a:hover {
     text-decoration: none;
 }
