--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,26 +2,12 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head th:replace="fragments/header.html :: header(title = 'Codeon')"></head>
 <body>
-<!--<header class="d-none d-lg-block">-->
-<!--    <video autoplay="autoplay" muted="muted" loop="loop">-->
-<!--        <source src="https://www.videvo.net/videvo_files/converted/2016_04/preview/160330_1_Typing1_Mpeg4_4K.mov32174.webm" type="video/webm">-->
-<!--    </video>-->
-<!--    <div class="container h-100">-->
-<!--        <div class="d-flex h-100 text-center align-items-center">-->
-<!--            <div class="w-100 text-white">-->
-<!--                <h1 class="display-3" id ="logo" style="font-size: 12em">CodeOn</h1>-->
-<!--                <div class="d-flex justify-content-center">-->
-<!--                    <a id="index-login" th:href="@{|/login|}">Login</a>-->
-<!--                    <a id="index-register" th:href="@{|/register|}">Register</a>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</header>-->
+
+
 <div class="parallax">
-    <div class="container h-100">
-        <div class="d-flex h-100 text-center align-items-center">
-            <div class="w-100">
+    <div class="container h-100 ">
+        <div class="d-flex h-100 text-center align-items-center ">
+            <div class="w-100 ">
                 <h1 class="display-1" id ="logo">CodeOn</h1>
                 <h2 class="display-5 splash"> A network for developers to grow as a community of current students and graduates. </h2>
                 <div class="d-flex justify-content-center">
@@ -31,25 +17,24 @@
             </div>
         </div>
     </div>
-
 </div>
 
-<div class="row">
-    <div class="col-xs-12 col-md-4 mb-1">
-        <div class="card shadow p-3 mb-5 bg-white rounded">
-            <div class="embed-responsive embed-responsive-4by3">
-                <img src="/img/whiteboard-card.jpg" class="card-img-top embed-responsive-item" alt="...">
-            </div>
-            <div class="card-body">
-                <h5 class="card-title">Whiteboard</h5>
-                <p class="card-text">We all deal with the anxiety of interviewing and the thought of whiteboarding. We here at CodeOn have came up with an enviroment to practice and sharpen those skills that we have developed at bootcamp</p>
-                <a href="#" class="btn btn-link">Learn More</a>
+<div class="d-flex text-center align-items-center">
+<h1 class="m-5">Stay connected to the other developers  and sharpen your skills  at CodeOn. With the use of talk.js and firepad editor, you can whiteboard with other members and review problems in real time.</h1>
+</div>
+    <div class="row">
+        <div class="col-xs-12 col-md-4 mb-1">
+            <div class="card shadow p-3 mb-5 bg-white rounded">
+                <div class="embed-responsive embed-responsive-4by3">
+                    <img src="/img/whiteboard-card.jpg" class="card-img-top embed-responsive-item" alt="...">
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">Whiteboard</h5>
+                    <p class="card-text">We all deal with the anxiety of interviewing and the thought of whiteboarding. We here at CodeOn have came up with an enviroment to practice and sharpen those skills that we have developed at bootcamp</p>
+                    <a href="#" class="btn btn-link">Learn More</a>
+                </div>
             </div>
         </div>
-    </div>
-
-
-
         <div class="col-xs-12 col-md-4 mb-1">
             <div class="card shadow p-3 mb-5 bg-white rounded">
                 <div class="embed-responsive embed-responsive-4by3">
@@ -74,15 +59,15 @@
                 </div>
             </div>
         </div>
-
-
 </div>
 
 
 <div class="parallax2">
     <div class="d-flex h-100 text-center align-items-center">
+        <h1 class="display-1">
+            To access all of CodeOn's features please log in or register
+        </h1>
 
-    <h1>Stay connected to the other developers  and sharpen your skills  at CodeOn. With the use of talk.js and firepad editor, you can connect with other users and review problems in real time.</h1>
     </div>
 </div>
 <div class="card-footer bg-transparent border-none">
