--- a/src/main/resources/templates/users/login.html
+++ b/src/main/resources/templates/users/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head th:replace="fragments/header.html :: header(title='Login')"></head>
-<body class ="back">
+<body class ="pic">
 <nav th:replace="fragments/navbar.html :: navbar"></nav>
 
 <div th:if="${param.error}">
