modified to remove view and change create to a button. logout color fixed. on hover all nav items change to CodeOn color.

--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -182,8 +182,20 @@ header {
     font-size: 100px;
 }
 
-@media only screen and (max-width: 600px) {
-.parallax2{
-    display: none;
+.nav-create-button, .logout-button {
+    color: rgba(255,255,255,.5) !important;
 }
+
+.nav-link:hover, .nav-create-button:hover, .logout-button:hover{
+    color: #0f6674 !important;
+    text-decoration: none !important;
+}
+/*.logout-button:hover{*/
+/*    text-decoration: none;*/
+/*    color: #0c5460 !important;*/
+/*}*/
+@media only screen and (max-width: 600px) {
+    .parallax2{
+        display: none;
+    }
 }
