--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -37,7 +37,8 @@
                     <a class="nav-link" th:href="@{|/users/dashboard|}">Dashboard</a>
                 </li>
                 <li class="nav-item">
-                    <button class="btn nav-create-button" id="nav-mentorship-posts-create">Create Mentorship Post
+                    <button class="btn nav-create-button" id="nav-mentorship-posts-create" data-toggle="modal"
+                            data-target="#mentorship-posts-create-modal">Create Mentorship Post
                     </button>
                 </li>
                 <li class="nav-item">
@@ -72,6 +73,25 @@
                 </li>
             </ul>
             <ul th:if="${#httpServletRequest.requestURI.contains('users/dashboard')}" class="navbar-nav ml-auto">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Create
+                    </a>
+                    <div class="dropdown-menu bg-dark" aria-labelledby="navbarDropdown">
+                        <button class="btn nav-create-button dropdown-item bg-dark" id="dash-nav-interview-questions-create" data-toggle="modal"
+                                data-target="#interview-questions-create-modal">Create Interview Question
+                        </button>
+                        <button class="btn nav-create-button dropdown-item bg-dark" id="dash-nav-mentorship-posts-create" data-toggle="modal"
+                                data-target="#mentorship-posts-create-modal">Create Mentorship Post
+                        </button>
+                        <button class="btn nav-create-button dropdown-item bg-dark" id="dash-nav-job-posts-create" data-toggle="modal"
+                                data-target="#job-postings-create-modal">Create Job Post
+                        </button>
+                        <button class="btn nav-create-button dropdown-item bg-dark" id="dash-nav-whiteboard-questions-create" data-toggle="modal"
+                                data-target="#whiteboard-questions-create-modal">Create Whiteboard Question
+                        </button>
+                    </div>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{|/interview-questions/show|}">Interview Questions</a>
                 </li>
