--- a/src/main/resources/templates/mentorship-posts/show.html
+++ b/src/main/resources/templates/mentorship-posts/show.html
@@ -34,9 +34,8 @@
                 <div class="col-11">
                             <div th:id="'post-' + ${post.id}"></div>
                     <p class="m-r mb-0 userprint">Posted on: <span class="userinfo" th:text = "${post.dateTime}"></span> by <span class="userinfo" th:text="${post.user.username}"></span>    </p>
-                                <h1 th:text = "${post.body}"></h1>
-                                <p th:text = "${post.title}"></p>
-                                <p th:text = "${post.answer}"></p>
+                                <h1 th:text = "${post.title}"></h1>
+                                <p th:text = "${post.body}"></p>
                             <div th:each="comment : ${post.commentList}">
                                 <div class="row">
                                     <div class="col-1">
