--- a/src/main/resources/templates/users/dashboard.html
+++ b/src/main/resources/templates/users/dashboard.html
@@ -185,8 +185,8 @@
                 <div class="col-11">
                                 <div th:id="'post-' + ${post.id}">
                                     <p class="m-r mb-0 userprint">Posted on: <span class="userinfo" th:text = "${post.dateTime}"></span> by <span class="userinfo" th:text="${post.user.username}"></span></p>
-                                    <h1 th:text = "${post.body}"></h1>
-                                    <p th:text = "${post.title}"></p>
+                                    <h1 th:text = "${post.title}"></h1>
+                                    <p th:text = "${post.body}"></p>
                                     <p class = "mb-0" th:text = "${post.answer}"></p>
                                     <hr class="m-0">
                                     <!--                                                        <p class="m-r mb-0">Asked by: <span th:text="${post.user.username}"></span> On: <span th:text = "${post.dateTime}"></span>  </p>-->
@@ -255,9 +255,8 @@
                         <div class="col-11">
                             <div th:id="'post-' + ${post.id}">
                                 <p class="m-r mb-0 userprint">Posted on: <span class="userinfo" th:text = "${post.dateTime}"></span> by <span class="userinfo" th:text="${post.user.username}"></span></p>
-                                <h1 th:text = "${post.body}"></h1>
-                                <p th:text = "${post.title}"></p>
-                                <p class = "mb-0" th:text = "${post.answer}"></p>
+                                <h1 th:text = "${post.title}"></h1>
+                                <p th:text = "${post.body}"></p>
                                 <hr class="m-0">
                                 <!--                                                        <p class="m-r mb-0">Asked by: <span th:text="${post.user.username}"></span> On: <span th:text = "${post.dateTime}"></span>  </p>-->
                                 <div  th:if="${post.imageURLList.size() > 0 && post.imageURLList[0].url.length() > 8}" >
@@ -329,9 +328,8 @@
                             <div class="col-11">
                                 <div th:id="'post-' + ${post.id}">
                                     <p class="m-r mb-0 userprint">Posted on: <span class="userinfo" th:text = "${post.dateTime}"></span> by <span class="userinfo" th:text="${post.user.username}"></span></p>
-                                    <h1 th:text = "${post.body}"></h1>
-                                    <p th:text = "${post.title}"></p>
-                                    <p class = "mb-0" th:text = "${post.answer}"></p>
+                                    <h1 th:text = "${post.title}"></h1>
+                                    <p th:text = "${post.body}"></p>
                                     <hr class="m-0">
                                     <!--                                                        <p class="m-r mb-0">Asked by: <span th:text="${post.user.username}"></span> On: <span th:text = "${post.dateTime}"></span>  </p>-->
                                     <div  th:if="${post.imageURLList.size() > 0 && post.imageURLList[0].url.length() > 8}" >
